<resources>
    <string name="app_name">TimeTrack</string>
    <string name="title_timer">Timer</string>
    <string name="title_projects">Projects</string>
    <string name="title_settings">Settings</string>

    <!-- Login -->
    <string name="hint_password_text_field">Password</string>
    <string name="hint_email_text_field">Email</string>
    <string name="text_forgot_password_button">Forgot Password?</string>
    <string name="text_sign_in_button">Sign in</string>
    <string name="text_sign_up_button">Sign up</string>

    <!-- Registration -->
    <string name="hint_name_text_field">Name</string>
    <string name="terms_description_text">I agree to</string>
    <string name="terms_of_use_text">Terms of Use</string>

    <!-- Timer -->
    <string name="title_task">Tasks</string>
    <string name="title_work_time">Work Time</string>


    <!-- Error Types -->
    <string name="error_alert_ok_button_title">OK</string>
    <string name="error_type_user_unauthorized">We couldn\'t find a account with this email and password combination. Try again or reset your password</string>
    <string name="error_type_search_history_fetch">Failed to fetch search history</string>
    <string name="error_type_search_history_creation">Failed to create search history</string>
    <string name="title_no_workspace_yet_button">No Workspace yet?</string>
    <string name="hint_workspace_selection">Workspace</string>
    <string name="hint_organization_selection">Organization</string>
    <string name="description_workspace_selection">Now, pick the workspace for your projects. It\'s tied to your organization choice.</string>
    <string name="description_organization_selection">Please select your default organization from the list below. Don\'t worry, you can always change this later from your settings.</string>
</resources>